v1.2.0 - Fix spacing on `c-listing` component. Fix display type on `c-overflowCarousel` component (#170)

--- a/src/scss/components/optional/_listings.scss
+++ b/src/scss/components/optional/_listings.scss
@@ -130,6 +130,7 @@ $listing--inactive-bg           : rgba($listing-bg, 0.5);
             .c-listing-item-link {
                 display: block;
                 color: $color-text;
+                padding: spacing(x2);
                 text-decoration: none;
 
                 &:hover,
